--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -15,3 +15,16 @@
 	min-width: 780px;
 	border: 3px solid #000D3E;
 }
+
+#main_calendar {
+	display: inline-block;
+	border: 3px solid #51BBE4;
+	border-radius: 6px;
+	padding: 5px;
+	vertical-align: top;
+	
+	section.upcoming_event {
+		border: 1px solid black;
+		padding: 5px;
+	}
+}
