--- a/app/views/home/main_carousel.html.erb
+++ b/app/views/home/main_carousel.html.erb
@@ -27,6 +27,17 @@
     <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
   </div>
   
+  <div id="main_calendar">
+    <section class="upcoming_event">
+      <section class="title">Veggie dinner</section>
+      <section class="date">4/8</section>
+    </section>
+    <section class="upcoming_event">
+      <section class="title">Guitar Performance</section>
+      <section class="date">5/6</section>
+    </section>
+  </div>
+  
   <div id="information">
     <p>
       Andriana Santiago explores.
