--- a/app/views/home/main_carousel.html.erb
+++ b/app/views/home/main_carousel.html.erb
@@ -28,14 +28,12 @@
   </div>
   
   <div id="main_calendar">
-    <section class="upcoming_event">
-      <section class="title">Veggie dinner</section>
-      <section class="date">4/8</section>
-    </section>
-    <section class="upcoming_event">
-      <section class="title">Guitar Performance</section>
-      <section class="date">5/6</section>
-    </section>
+    <% Event.visible_to_public.each do |event| %>
+      <section class="upcoming_event">
+        <section class="title"><%= event.name %></section>
+        <section class="date"><%= event.start_time.strftime("%m/%d %I %p") %></section>
+      </section>
+    <% end %>
   </div>
   
   <div id="information">
